--- a/locale/ru/ru.json
+++ b/locale/ru/ru.json
@@ -8,7 +8,7 @@
   "07": "GitHub репозиторий",
   "08": "Команда сборки",
   "09": "Главная ветка",
-  "10": "Синхронизировать каждые мин.",
+  "10": "Синхронизировать каждые {{ph}} мин.",
   "11": "Сохранить",
   "12": "Отмена",
   "14": "Запустить сборку",
