Translate ru.json via GitLocalize

--- a/locale/ru/ru.json
+++ b/locale/ru/ru.json
@@ -1,11 +1,11 @@
 {
-  "01": "Настройки",
-  "02": "Настройте параметры  соединение с репозиторием и интервал синхронизации",
-  "03": "Перейти в настройки",
-  "04": "Служба поддержки",
-  "05": "Обучение",
-  "06": "English version",
-  "07": "GitHub репозиторий",
+  "1": "Настройки",
+  "2": "Настройте параметры  соединение с репозиторием и интервал синхронизации",
+  "3": "Перейти в настройки",
+  "4": "Служба поддержки",
+  "5": "Обучение",
+  "6": "English version",
+  "7": "GitHub репозиторий",
   "08": "Команда сборки",
   "09": "Главная ветка",
   "10": "Синхронизировать каждые {{ph}} мин.",
@@ -14,5 +14,9 @@
   "14": "Запустить сборку",
   "15": "Показать больше",
   "16": "Новая сборка",
-  "17": "Введите хеш коммита, для которого вы хотите запустить сборку."
+  "17": "Введите хеш коммита, для которого вы хотите запустить сборку.",
+  "18": "Перезапустить сборку",
+  "19": "Поле формы обязательно для заполнения",
+  "20": "ОШИБКА: Ошибка клонирования репозитория.",
+  "21": "Хэш должен быть не менее 7 символов"
 }
